--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 sfg.brewery.beer-inventory-service-host=http://localhost:8082
 spring.datasource.initialization-mode=EMBEDDED
+spring.cache.jcache.config=classpath:ehcache.xml
 
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.use_sql_comments=true
